--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About us</a>
               </li>
-                <a class="nav-link" href="meshinary.html">MESHINARY</a>
+                <a class="nav-link" href="meshinary.html">Meshinary</a>
             </li>
               <li class="nav-item">
                 <a class="nav-link" href="registration.html" tabindex="-1" aria-disabled="true">Registration</a>
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="float-right"> 
-          <a herf="#" class="btn btn-primary">login</a>
+          <a herf="file:///C:/Users/khade/OneDrive/Desktop/kkkk/registration.html" class="btn btn-primary">login</a>
         </div>
           </nav>
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -127,7 +127,7 @@ Your account would be valid for One month / One year from the date of the paymen
                 <div class="department-details">
                     <div class="round-style"></div>
                     <i class="icon flaticon-animal"></i>
-                    <h4 class="title">horvester</h4>
+                    <h4 class="title">HORVESTER</h4>
                      <p class="details sec-padding5">వరి సాగులో అత్యంత శ్రమతో కూడుకున్న పనిలో హార్వెస్టింగ్ ఒకటి. హార్వెస్టింగ్ యాంత్రీకరణలో 50 సంవత్సరాలకు పైగా గొప్ప అనుభవంతో, కుబోటా ఆసియాలో పరిశ్రమ నిపుణుడు మరియు ఆలోచనా నాయకుడిగా మారింది. మా కంబైన్ హార్వెస్టర్లు వేగం మరియు ఖచ్చితత్వంతో పనిచేస్తాయి, మా కస్టమర్‌లకు మరింత లాభదాయకతను మరియు దీర్ఘకాలిక మన్నికను అందిస్తాయి.        
                            <a href="https://www.kubota.co.in/telugu/products/harvester/" class="thm-btn btn-xs img-inner"><i class="fa fa-angle-double-right"></i>పూర్తి వివరాలు</a>
                 </div>
@@ -189,20 +189,19 @@ Your account would be valid for One month / One year from the date of the paymen
               <h3>QUICK LINKS</h3>
               <ul>
                 <li>
-                  <a class="nav-link " aria-current="page" href="file:///E:/kkkk/kk.html">Home</a>
-                </li>
-                
-                <li >
-                  <a class="nav-link" href="file:///E:/kkkk/about.html">About us</a>
+                  <a class="nav-link " aria-current="page" href="file:///C:/Users/khade/OneDrive/Desktop/kkkk/index.html">Home</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="facality.html">Mashinary</a>
+                  <a class="nav-link" href="file:///C:/Users/khade/OneDrive/Desktop/kkkk/about.html">About us</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="file:///E:/kkkk/registration.html" tabindex="-1" aria-disabled="true">Registration</a>
+                  <a class="nav-link" href="file:///C:/Users/khade/OneDrive/Desktop/kkkk/meshinary.html">Mashinary</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="Contact.html">Contact</a>
+                  <a class="nav-link" href="file:///C:/Users/khade/OneDrive/Desktop/kkkk/registration.html" tabindex="-1" aria-disabled="true">Registration</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="file:///C:/Users/khade/OneDrive/Desktop/kkkk/contact.html">Contact</a>
                 </li>
               </ul>
             </div>
