--- a/registration.html
+++ b/registration.html
@@ -120,19 +120,19 @@
               <h3>QUICK LINKS</h3>
               <ul>
                 <li>
-                  <a class="nav-link " aria-current="page" href="file:///E:/kkkk/kk.html">Home</a>
-                </li>
-                <li >
-                  <a class="nav-link" href="file:///E:/kkkk/about.html">About us</a>
+                  <a class="nav-link " aria-current="page" href="file:///C:/Users/khade/OneDrive/Desktop/kkkk/index.html">Home</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="facality.html">Mashinary</a>
+                  <a class="nav-link" href="file:///C:/Users/khade/OneDrive/Desktop/kkkk/about.html">About us</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="file:///E:/kkkk/registration.html" tabindex="-1" aria-disabled="true">Registration</a>
+                  <a class="nav-link" href="file:///C:/Users/khade/OneDrive/Desktop/kkkk/meshinary.html">Mashinary</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="Contact.html">Contact</a>
+                  <a class="nav-link" href="file:///C:/Users/khade/OneDrive/Desktop/kkkk/registration.html" tabindex="-1" aria-disabled="true">Registration</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="file:///C:/Users/khade/OneDrive/Desktop/kkkk/contact.html">Contact</a>
                 </li>
               </ul>
             </div>
